<resources>
    <string name="app_name">Xerviceus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_orders">Orders</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_profile">Profile</string>
    <string name="by_signup">By Signing up, you agree to out</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="or">OR</string>
    <string name="proceed">Proceed</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email ID</string>
    <string name="enter_pass">Enter Password</string>
    <string name="forgot_pass"><u>Forgot Password</u></string>
    <string name="signin_email">Sign in with your registered email ID</string>
    <string name="com_signin">Complete Sign-in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter the OTP</string>
    <string name="otp_sent">OTP has been sent to your Registered Mobile Number</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="login_using">Login / Sign up using</string>
    <string name="login_using_two">Login using Email or Social Account</string>
    <string name="login_using_mobile">Login using your mobile</string>
    <string name="enter_phone">Please enter your phone number to receive the code:</string>
    <string name="get_code">Get a code</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="continu">Continue</string>
    <string name="search">Search</string>
    <string name="buy_now">Buy Now</string>
    <string name="service_name">Service Name</string>
    <string name="service_desc">Service Description:</string>
    <string name="price">Price</string>
    <string name="notes">Special Notes</string>
    <string name="colon">:</string>
    <string name="select_address">Please Select The Address</string>
    <string name="add_address">Add New Address</string>
    <string name="schedule">Schedule</string>
    <string name="selected_date">Selected Date :</string>
    <string name="selected_time">Selected Time :</string>
    <string name="optional">(Optional)</string>
    <string name="upload_pics">Upload the Picture of the Area / Equipment to be Serviced</string>
    <string name="add_photo">Add Photo</string>
    <string name="cus_notes">Customer Notes :</string>
    <string name="enter_notes">Enter your notes here</string>
    <string name="order_summary">Order Summary</string>
    <string name="service_name2">Service Name :</string>
    <string name="service_desc2">Service Description :</string>
    <string name="have_promo">Have a promo code?</string>
    <string name="submit">Submit</string>
    <string name="total_pay_amt">Total Payable Amount</string>
    <string name="service_cost">Service Cost</string>
    <string name="taxes">Taxes</string>
    <string name="scheduled_date_time">Scheduled Date and Time</string>
    <string name="contact_dts">Contact Details</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_no">Order No :</string>
    <string name="booked_on">Booked On :</string>
    <string name="my_orders">My Orders</string>
    <string name="order_details">Order Details</string>
    <string name="rewards">Rewards</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email ID</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="address">Selected Address :</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Land Mark</string>
    <string name="welcome">Welcome</string>
    <string name="adds_dts">address details</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="type_own">Type your own</string>
    <string name="adds_name">Address Name</string>
    <string name="adds_mobile">Address Mobile</string>
    <string name="redeem">Redeem</string>
    <string name="earn">Earn</string>
    <string name="history">History</string>
    <string name="reschedule">Reschedule</string>
    <string name="payment_dts">Payment Details</string>
    <string name="total_amount">Total Amount</string>
    <!--<string name="total_pay_amt"></string>-->


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
</resources>
