<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProceedActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <ImageView
                android:id="@+id/img"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.hss.xservices.utils.CustomFontTextView
                android:gravity="center"
                android:id="@+id/txt_title"
                android:layout_gravity="bottom"
                android:background="@color/transparent2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <com.hss.xservices.utils.CustomFontTextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/select_address"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerAddress"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


        <com.hss.xservices.utils.CustomFontButton
            android:background="@color/colorAccent"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:id="@+id/btn_addAddress"
            android:text="@string/add_address"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hss.xservices.utils.CustomFontButton
            android:background="@color/dark_green"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_schedule"
            android:text="@string/schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>